fixed clipping

--- a/style.css
+++ b/style.css
@@ -365,8 +365,6 @@ canvas {
 }
 
 .product {
-  overflow: hidden;
-
   display: flex;
   gap: 80px;
   flex-direction: column;
